fix spacing issue

--- a/portfolio.css
+++ b/portfolio.css
@@ -453,7 +453,7 @@ header > nav > ul > li > a {
 }
 
 .column{
-	width:100;
+	width: 1000;
 	background-color: #fff;
 	margin-top: 20px;
 }
